# luux-media-emails

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yaml
components/: composer.py  emails.py  getter.py
controllers/: metrics.py  reports.py  tasks.py
db/: bigquery.py
libs/: bigquery.py  emails.py
mail/: mail_service.py
models/: Daily.py  Weekly.py  composer.py  getter.py  metrics.py  reports.py
models/metrics/: base.py  daily.py  weekly.py
report/: report.py  report_controller.py  report_repo.py  report_service.py
report/metrics/: base.py  daily.py  formatter.py  weekly.py
tasks/: cloud_tasks.py  tasks.py  tasks_controller.py  tasks_service.py
test/: test_units.py
