[tool.poetry]
name = "luux-media-emails"
version = "2.0.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^2.28.1"
google-cloud-tasks = "^2.7.0"
compose = "^1.2.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-timeout = "^2.0.1"
mypy = "^0.910"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# addopts = "-s --durations=0 -n12"
addopts = "-s --durations=0"
testpaths = [
    "test",
]
